feat(payments): add Wompi checkout integration (#13)
* feat(payments): add Wompi checkout integration

* refactor: improve API architecture and code organization

* double refactor: improve API architecture and code organization

* fix(tests): resolve sonar issues - wrap assertThrows lambdas and remove redundant eq() matchers